--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "formik": "^1.5.8",
+    "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.0.3"
+    "http-proxy-middleware": "^1.0.3",
+    "webpack-cli": "^3.3.12"
   }
 }
