--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "John ahn",
   "license": "ISC",
   "dependencies": {
+    "@craco/craco": "^5.6.4",
+    "antd": "^4.4.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -23,6 +25,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "less": "^3.11.3",
     "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "react-redux": "^5.0.7",
