--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "formik": "^1.5.8",
+    "gsap": "^3.5.1",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
