--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "scripts": {
     "start": "node server/index.js",
     "backend": "nodemon server/index.js",
-    "frontend": "npm run start --prefix client",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
-    "prod": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+    "frontend_react": "npm run start --prefix client_react",
+    "frontend_vue": "npm run start --prefix client_vue",
+    "dev_react": "concurrently \"npm run backend\" \"npm run start --prefix client_react\"",
+    "dev_vue": "concurrently \"npm run backend\" \"npm run start --prefix client_vue\""
   },
   "author": "John ahn",
   "license": "ISC",
@@ -31,7 +32,8 @@
     "mongoose": "^5.4.20",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
-    "supports-color": "^7.1.0"
+    "supports-color": "^7.1.0",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
